# ms-alumnos

./: .env_example  .gitignore  Dockerfile  K6_test.md  README.md  app.py  deploy.ps1  pyproject.toml  requirements.txt  spike_tests.js  test_performance.js  wsgi.py
Dockerfile/: Dockerfile
app/: __init__.py
app/config/: cache_config.py  config.py
app/mapping/: __init__.py  alumno_schema.py  tipo_documento_schema.py
app/models/: __init__.py  alumno.py  tipo_documento.py
app/repositories/: __init__.py  alumno_repositorio.py  tipo_documento_repositorio.py
app/resources/: __init__.py  alumno_resource.py  tipo_documento_resource.py
app/route/: route.py
app/services/: __init__.py  alumno_service.py  tipo_documento_service.py
docker/: .env_example  docker-compose.yml
instance/: test.db
test/: instancias.py  test_alumno.py  test_tipo_documento.py
traefik/: .env-example  docker-compose.yml
