[project]
name = "ms-alumnos"
version = "1.0.0"
description = "Microservicio de gestion de alumnos"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "flask==3.1.2",
    "flask-marshmallow==1.3.0",
    "flask-sqlalchemy==3.1.1",
    "marshmallow==3.24.1",
    "psycopg2>=2.9.11",
    "python-dotenv==1.0.1",

    "Flask-Caching==2.3.0",
    "redis==5.2.0",
    "requests==2.32.3"
]

